--- a/beamercolorthemeifrs.sty
+++ b/beamercolorthemeifrs.sty
@@ -230,5 +230,7 @@
 \setbeamercolor{note title}{bg=white!80!black, fg=black}
 \setbeamercolor{note date}{parent=note title}
 
+\setbeamercolor{footnote}{parent=local structure}
+
 \mode
 <all>
