--- a/beamerfontthemeifrs.sty
+++ b/beamerfontthemeifrs.sty
@@ -76,7 +76,7 @@
 \setbeamerfont{block body}{}
 \setbeamerfont{block body alerted}{}
 \setbeamerfont{block body example}{}
-\setbeamerfont{block title}{size=\large,series=\bfseries}
+\setbeamerfont{block title}{series=\bfseries}
 \setbeamerfont{block title alerted}{parent={block title,alerted text}}
 \setbeamerfont{block title example}{parent={block title,example text}}
 
@@ -117,6 +117,9 @@
 \setbeamerfont{note page}{size=\small}
 \setbeamerfont{note title}{parent=note page}
 \setbeamerfont{note date}{size=\footnotesize}
+
+\setbeamerfont{footnote}{size=\tiny}
+\setbeamerfont{footnote mark}{size=\tiny}
 
 \mode
 <all>
