--- a/beamerinnerthemeifrs.sty
+++ b/beamerinnerthemeifrs.sty
@@ -20,7 +20,7 @@
   \begin{beamercolorbox}[wd=\paperwidth,center,sep=0mm]{logo}%
     \inserttitlegraphic\\
     \vspace{-2.5mm}
-    \usebeamercolor[fg]{separation line}\color{fg}\rule[1ex]{14cm}{0.5pt}
+    \usebeamercolor[fg]{separation line}\color{fg}\rule[1ex]{14cm}{1pt}
   \end{beamercolorbox}
   \vspace{1cm}
   \begin{beamercolorbox}[wd=12cm,leftskip=1cm,sep=0pt]{title}
@@ -335,7 +335,7 @@
 {
   \par\vskip\medskipamount%
   \begin{beamercolorbox}[colsep*=.75ex]{block title}
-    \usebeamerfont*{block title}\insertblocktitle%
+    \usebeamerfont{block title}\insertblocktitle%
   \end{beamercolorbox}%
   {\parskip0pt\par}%
   \ifbeamercolorempty[bg]{block title}
