--- a/beamerouterthemeifrs.sty
+++ b/beamerouterthemeifrs.sty
@@ -1,3 +1,4 @@
+\setbeamertemplate{frametitle continuation}{}
 \setbeamertemplate{frametitle}{
     \begin{beamercolorbox}[wd=14cm,ht=1.5cm]{frametitle}
         \MakeUppercase{\insertframetitle}%
