Uma section* não cria um slide de divisão

--- a/beamerinnerthemeifrs.sty
+++ b/beamerinnerthemeifrs.sty
@@ -50,7 +50,7 @@
 }
 
 % Slide de seção
-\AtBeginSection{%
+\AtBeginSection[]{%
   \begingroup
     \setbeamertemplate{footline}{
       \vspace{-4cm}
