--- a/beamerthemeifrs.sty
+++ b/beamerthemeifrs.sty
@@ -9,6 +9,10 @@
 \usepackage{xcolor}
 \usepackage{tikz}
 \usetikzlibrary{backgrounds,fit}
+\usepackage{booktabs}
+\usepackage[alf]{abntex2cite}
+\usepackage[brazil]{babel}
+
 
 \useinnertheme{ifrs}
 \useoutertheme{ifrs}
