Reorganiza todo o repositório

--- a/beamerfontthemeifrs.sty
+++ b/beamerfontthemeifrs.sty
@@ -1,6 +1,7 @@
 \mode<presentation>
 
 \usepackage[default]{opensans}
+\newcommand*{\ttfamilywithbold}{\fontfamily{lmtt}\selectfont}
 
 \setbeamerfont{frametitle}{size=\Large,series=\bfseries}
 
