--- a/beamercolorthemeifrs.sty
+++ b/beamercolorthemeifrs.sty
@@ -22,48 +22,92 @@
 \definecolor{textologo}{RGB}{0,0,0}
 \definecolor{fundologo}{RGB}{255,255,255}
 
-% Solarized Light - cores copiadas de
+% Solarized - cores copiadas de
 % https://github.com/subtheme-dev/solarized
+\definecolor{base03}{HTML}{002b36}
+\definecolor{base02}{HTML}{073642}
+\definecolor{base01}{HTML}{586e75}
+\definecolor{base00}{HTML}{657b83}
+\definecolor{base0}{HTML}{839496}
+\definecolor{base1}{HTML}{93a1a1}
+\definecolor{base2}{HTML}{eee8d5}
+\definecolor{base3}{HTML}{fdf6e3}
+\definecolor{yellow}{HTML}{b58900}
+\definecolor{orange}{HTML}{cb4b16}
+\definecolor{red}{HTML}{dc322f}
+\definecolor{magenta}{HTML}{d33682}
+\definecolor{violet}{HTML}{6c71c4}
+\definecolor{blue}{HTML}{268bd2}
+\definecolor{cyan}{HTML}{2aa198}
+\definecolor{green}{HTML}{859900}
+
+% Solarized Light
 \def\codelight{%
-    \definecolor{codekeyword}{HTML}{859900} % green
-    \definecolor{codevar}{HTML}{268bd2}     % blue
-    \definecolor{codestring}{HTML}{2aa198}  % cyan
-    \definecolor{codecomment}{HTML}{93a1a1} % base01
-    \definecolor{codebg}{HTML}{fdf6e3}      % base03
-    \definecolor{codefg}{HTML}{586e75}      % base1
-    \definecolor{codelines}{HTML}{657b83}   % base0
-    \definecolor{codetitle}{HTML}{657b83}   % base0
-    \setbeamercolor{editor}{fg=codefg,bg=codebg}
+    \colorlet{codekeyword}{green}
+    \colorlet{codevar}{blue}
+    \colorlet{codestring}{cyan}
+    \colorlet{codedirective}{orange}
+    \colorlet{codecomment}{base1}
+    \colorlet{codebg}{base3}
+    \colorlet{codefg}{base01}
+    \colorlet{codelines}{base1}
+    \colorlet{codetitle}{base00}
+    \colorlet{codetext}{base03}
+    \lstset{
+        commentstyle=\color{codecomment},
+        keywordstyle=\color{codekeyword},
+        directivestyle=\color{codedirective},
+        numberstyle=\scriptsize\color{codelines},
+        stringstyle=\color{codestring},
+        identifierstyle=\color{codevar},
+    }
 }
 
-% Solarized Dark - cores copiadas de
-% https://github.com/subtheme-dev/solarized
+% Solarized Dark
 \def\codedark{%
-    \definecolor{codekeyword}{HTML}{859900} % green
-    \definecolor{codevar}{HTML}{268bd2}     % blue
-    \definecolor{codestring}{HTML}{2aa198}  % cyan
-    \definecolor{codecomment}{HTML}{586e75} % base01
-    \definecolor{codebg}{HTML}{002b26}      % base03
-    \definecolor{codefg}{HTML}{93a1a1}      % base1
-    \definecolor{codelines}{HTML}{839496}   % base0
-    \definecolor{codetitle}{HTML}{839496}   % base0
-    \setbeamercolor{editor}{fg=codefg,bg=codebg}
+    \colorlet{codekeyword}{green}%
+    \colorlet{codevar}{blue}%
+    \colorlet{codestring}{cyan}%
+    \colorlet{codedirective}{orange}%
+    \colorlet{codecomment}{base01}%
+    \colorlet{codebg}{base03}%
+    \colorlet{codefg}{base1}%
+    \colorlet{codelines}{base01}%
+    \colorlet{codetitle}{base0}%
+    \colorlet{codetext}{base3}%
+    \lstset{%
+        commentstyle=\color{codecomment},%
+        keywordstyle=\color{codekeyword},%
+        directivestyle=\color{codedirective},%
+        numberstyle=\scriptsize\color{codelines},%
+        stringstyle=\color{codestring},%
+        identifierstyle=\color{codevar},%
+    }%
 }
 
-
-\def\codegreen{%
-    \colorlet{codekeyword}{black}
-    \colorlet{codevar}{verdem}
-    \colorlet{codestring}{verde}
-    \colorlet{codecomment}{verdexc}
-    \colorlet{codebg}{white}
-    \colorlet{codefg}{verdec}
-    \colorlet{codelines}{verdexc}
-    \colorlet{codetitle}{verdem}
-    \setbeamercolor{editor}{fg=codefg,bg=codebg}
+\def\codenone{%
+    \colorlet{codekeyword}{black}%
+    \colorlet{codevar}{black!75}%
+    \colorlet{codestring}{black!75}%
+    \colorlet{codedirective}{black}%
+    \colorlet{codecomment}{black!50}%
+    \colorlet{codebg}{white}%
+    \colorlet{codefg}{black}%
+    \colorlet{codelines}{black!50}%
+    \colorlet{codetitle}{red}%
+    \colorlet{codetext}{black}%
+    \setbeamercolor{editor}{fg=codefg,bg=codebg}%
+    \lstset{%
+        commentstyle=\color{codecomment}\emph,%
+        keywordstyle=\color{codekeyword}\bfseries,%
+        directivestyle=\color{codedirective},%
+        numberstyle=\scriptsize\color{codelines},%
+        stringstyle=\color{codestring},%
+        identifierstyle=\color{codevar},%
+    }%
 }
 
-\codegreen
+\codelight
 
 
 \setbeamercolor{normal text}{fg=black,bg=white}
@@ -101,7 +145,7 @@
 
 \setbeamercolor{subtitle}{parent=title}
 
-\setbeamercolor{author}{parent=normal text}
+\setbeamercolor{author}{parent=palette primary}
 \setbeamercolor{author in head/foot}{parent=palette primary}
 \setbeamercolor{author in sidebar}{use=palette sidebar tertiary,fg=palette sidebar tertiary.fg}
 
@@ -109,7 +153,7 @@
 \setbeamercolor{institute in head/foot}{parent=palette tertiary}
 \setbeamercolor{institute in sidebar}{use=palette sidebar tertiary,fg=palette sidebar tertiary.fg}
 
-\setbeamercolor{date}{parent=normal text}
+\setbeamercolor{date}{parent=palette primary}
 \setbeamercolor{date in head/foot}{parent=palette secondary}
 \setbeamercolor{date in sidebar}{use=palette sidebar tertiary,fg=palette sidebar tertiary.fg}
 
